# gotham-agentes

./: .gitignore  README.md  docker-compose.yml
agents/minerador/: .gitignore  COMO_USAR.md  agent.config.json  gotham_radar.py  package.json  pyproject.toml
agents/minerador/data/: meta_ads_queries.json  meta_ads_queries_ugc_audit.json  reddit_queries.json  source_registry.json
agents/minerador/data/opportunities/: blocked-policy-test.json  codex-live.json  codex-selftest.json  first-test.json  live-round-2026-05-13.json  live-round-with-meta-ads-fixture.json  live-round-with-meta-ads-v2.json  live-round-with-meta-ads-v3-refresh.json  v2-fixture.json  (+4 more)
agents/minerador/opportunity_researcher/: __init__.py  agent.py  cli.py  evidence_quality.py  models.py  scoring.py  utils.py
agents/minerador/prompts/: researcher_system_prompt.md
agents/minerador/schemas/: opportunity_signal.schema.json
agents/minerador/scripts/: meta_ads_playwright.mjs
brain/: .env.example  .gitignore  Dockerfile  GEMINI_NEW_REPOS_gotham-brain_AGNO.md  main.py  pesquisador.py  pyproject.toml  requirements.txt
brain/agents/: __init__.py  alfred.py  batman.py  bruce.py  copywriter.py  minerador.py  pesquisador.py  ras.py  selina.py
brain/knowledge/: README.md
brain/knowledge/bruce/: scoring_formulas.md  scoring_rubric.md  source_tiers.md
brain/knowledge/ras/: fontes_confiveis.md  research_frameworks.md  research_templates.md
brain/knowledge/selina/: drc_framework.md  headlines_formulas.md  hooks_formulas.md  swipe_file.md  vsl_framework.md
brain/lib/: models.py  scoring.py
(+66 files in other folders)
