[project]
name = "gotham-brain"
version = "0.2.0"
description = "GOTHAM AgentOS — servidor central de agentes Agno"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.5.0",
    "groq>=0.11.0",
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "tavily-python>=0.5.0",
    "duckduckgo-search>=6.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "feedparser>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
